tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.error
run error: exit status 254
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:21:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:10:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:22:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:46:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:75:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:80:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/append-a-record-to-the-end-of-a-text-file.dart:84:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
